implemented beta distribution calculation.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
   <svg></svg>
+  <script src="./js/gamma.js"></script>
+  <script src="./js/math.js"></script>
   <script src="./js/main.js"></script>
 </body>
 </html>
